--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -18,7 +18,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "next": "^16.1.6",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
